# c-in-my-python

./: .gitignore  CMakeLists.txt  README.md  main.py  run_tests.sh
include/: magnitude.h  scalar_mult.h  vec_sum.h
src/: CMakeLists.txt  magnitude.c  scalar_mult.c  vec_sum.c
tests/: CMakeLists.txt  test_magnitude.c  test_scalar_mult.c  test_vec_sum.c
